--- a/src/components/NavBottun.css
+++ b/src/components/NavBottun.css
@@ -1,7 +1,7 @@
 div.navbottun{
     padding: 5px 0;
 }
-.navbottun a{
+.navbottun p{
     text-decoration: none;
     color: #ffffff;
     font-size: 20px;
