--- a/src/components/About.css
+++ b/src/components/About.css
@@ -13,6 +13,6 @@
     position: relative;
     padding-top: 40px;
     font-size: 14px;
-    color: white;
+    color: #EDEDED;
     z-index: 10;
 }
