--- a/src/components/Subtitle.css
+++ b/src/components/Subtitle.css
@@ -1,8 +1,8 @@
 .subtitle h2{
     margin-top: 250px;
     margin-bottom: 50px;
-    margin-left: 70px;
+    margin-left: 11%;
     font-size: 32px;
     font-weight: 100;
-    color: white;
+    color: #EDEDED;
 }
