--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App{
   width: 100%;
-  background: #000000;
+  background: #171717;
 }
 nav,.squea{
   position: fixed;
@@ -11,10 +11,10 @@ nav{
   z-index: 999;
 }
 .squea{
-  top: 140px;
-  left: 243px;
+  top: 14%;
+  left: 60.5%;
   width: 125px;
   height: 530px;
-  background: #DFFF1A;
+  background: #444;
   z-index: 1;
 }
