--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -4,8 +4,8 @@
     padding-top: 10px;
     padding-bottom: 5px;
     width: 100%;
-    height: 30vh;
-    background: #DA0037;
+    height: 20vh;
+    background: #ffffff;
     display: flex;
     justify-content: center;
     z-index: 20;
