--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,13 +1,27 @@
 .header h1{
     color: #EDEDED;
     letter-spacing:1.5px;
+    font-size: 48px;
+    mix-blend-mode: multiply;
+    background-color: black;
+    width: 100%;
+    height: 100%;
 }
-h1.sub{
-    color: #171717;
-    z-index: 10;
+.header img{
+    width: 100%;
+    height: 60%;
+    position: absolute;
+    object-fit: cover;
 }
 div.header{
+    position: relative;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
     padding-top: 45%;
-    padding-left: 12.5%;
+    width: 80%;
+    height: 70vw;
+    margin: 0 auto;
+
 }
