--- a/src/components/Skill.css
+++ b/src/components/Skill.css
@@ -1,10 +1,10 @@
 .skill p{
     position: relative;
-    color: #EDEDED;
+    color: #ffffff;
     z-index: 11;
 }
 .skill{
-    width: 60px;
+    width: 80%;
     flex-wrap: wrap;
-    margin-left: 13.5%;
+    margin: 0 auto;
 }
