--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,36 @@
 .App{
   width: 100%;
   background: #000000;
+  scroll-behavior: smooth;
 }
 body{
     font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
 }
 nav{
   position: fixed;
-  top: 30px;
-  margin-left: 10%;
-  justify-content: space-between;
-  width: 150px;
+  top: 20px;
+  margin:0 auto;
+  justify-content: space-around;
+  width: 100%;
   display: flex;
-  z-index: 999;
-
+  mix-blend-mode: difference;
+  z-index: 30;
+}
+img.headimg{
+  position: absolute;
+  top: 45vw;
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+}
+.wbox {
+  position: absolute;
+  top: 35vw;
+  left: 20%;
+  width: 85px;
+  height: 413px;
+  background: white;
+}
+img{
+  display: block;
 }
