--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,27 +1,16 @@
 .header h1{
-    color: #EDEDED;
+    color: #dfdfdf;
     letter-spacing:1.5px;
-    font-size: 48px;
-    mix-blend-mode: multiply;
-    background-color: black;
-    width: 100%;
-    height: 100%;
-}
-.header img{
-    width: 100%;
-    height: 60%;
-    position: absolute;
-    object-fit: cover;
+    font-size: 87px;
+    font-family: sans-serif;
+    text-align: center;
 }
 div.header{
     position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    width: 165px;
+    height: auto;
+    padding-top: 20vw;
+    padding-left: 15vw;
     text-align: center;
-    padding-top: 45%;
-    width: 80%;
-    height: 70vw;
-    margin: 0 auto;
-
+    align-items: center;
 }
