--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ img.headimg{
 }
 .wbox {
   position: absolute;
-  top: 35vw;
+  top: 38vw;
   left: 20%;
   width: 85px;
   height: 413px;
@@ -33,4 +33,24 @@ img.headimg{
 }
 img{
   display: block;
+}
+.load {
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+  padding-top: 130vw;
+  background: #000000;
+  transition: all .7s;
+  animation: fadeout 1s 1 forwards;
+  animation-delay: 2.5s;
+}
+@keyframes fadeout{
+	0% {
+    transform: translateY(0);
+  }
+	100% {
+    transform: translateY(-100vh)
+  }
 }
